--- a/Uart_Sl_Ms_struct_comand_for/Uart_Sl_Ms_struct_comand_for.ioc
+++ b/Uart_Sl_Ms_struct_comand_for/Uart_Sl_Ms_struct_comand_for.ioc
@@ -35,6 +35,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.USART3_4_IRQn=true\:0\:0\:false\:false\:true\:true
 PA10.Locked=true
 PA10.Signal=GPIO_Output
 PA11.Locked=true
@@ -45,9 +46,16 @@ PA9.Locked=true
 PA9.Signal=GPIO_Output
 PB3.Locked=true
 PB3.Signal=GPIO_Output
+PB8.GPIOParameters=PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB8.GPIO_PuPd=GPIO_PULLDOWN
 PB8.Locked=true
+PB8.PinState=GPIO_PIN_RESET
 PB8.Signal=GPIO_Output
+PB9.GPIOParameters=PinState,GPIO_PuPd
+PB9.GPIO_PuPd=GPIO_PULLDOWN
 PB9.Locked=true
+PB9.PinState=GPIO_PIN_RESET
 PB9.Signal=GPIO_Output
 PC10.Locked=true
 PC10.Signal=GPIO_Output
@@ -111,8 +119,9 @@ RCC.PLLCLKFreq_Value=16000000
 RCC.PLLMCOFreq_Value=16000000
 RCC.TimSysFreq_Value=8000000
 RCC.VCOOutput2Freq_Value=8000000
-USART3.IPParameters=VirtualMode-Asynchronous
+USART3.IPParameters=VirtualMode-Asynchronous,WordLength
 USART3.VirtualMode-Asynchronous=VM_ASYNC
+USART3.WordLength=WORDLENGTH_8B
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=Uart_Sl_Ms_struct_comand_for
